fixing width extending off browser width on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -481,16 +481,18 @@ footer a:hover {
   display: inline;
 }
 
-#page-Program.print .page,
-#page-Welcome.print .page {
-  float: left;
-  width: 4.05in;
-}
+@media print {
+  #page-Program.print .page,
+  #page-Welcome.print .page {
+    float: left;
+    width: 4.05in;
+  }
 
-#page-Program.print .back.page,
-#page-Welcome.print .back.page {
-  float: right;
-  margin-left: .20in;
+  #page-Program.print .back.page,
+  #page-Welcome.print .back.page {
+    float: right;
+    margin-left: .20in;
+  }
 }
 
 #page-Groups.print .row,
